--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,45 @@ body {
     font-family: var(--family-inter);
 }
 
+.form__checkbox-label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.form__checkbox-check[type=checkbox] {
+    position: absolute;
+    left: 0;
+    opacity: 0;
+    z-index: 2;
+}
+
+.form__checkbox-check[type=checkbox]+.form-checkbox__custom {
+    display: block;
+    width: 15px;
+    height: 15px;
+    background-color: var(--color-white);
+}
+
+.form__checkbox-check[type=checkbox]:checked+.form-checkbox__custom {
+    background-image: url(../img/check.svg);
+    background-repeat: no-repeat;
+    background-size: 11px;
+    background-position: center;
+}
+
+.form__checkbox-text {
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+.checkbox-link {
+    color: var(--color-white);
+}
+
 .btn {
     width: 100%;
 
@@ -84,11 +123,23 @@ body {
     width: 100%;
 
     border: none;
+
+    height: 60px;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: rgba(117, 117, 117, 1);
+
+    padding-left: 16px;
 }
 
-.input {}
-
-.section {}
+.input::placeholder {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: rgba(117, 117, 117, 1);
+}
 
 .section__upper {
     padding: 40px 0 20px;
@@ -881,6 +932,355 @@ body {
 /**************************/
 
 
+/********* $BANNERS *********/
+
+.banner {
+    margin-top: 30px;
+}
+
+.banner__mob {
+    position: relative;
+
+    height: 223px;
+
+    padding-bottom: 20px;
+}
+
+.banner__mob-img {
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+
+    object-fit: cover;
+}
+
+.banner__mob-img.mob_hide {
+    display: none;
+}
+
+.banner__title {
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: var(--color-white);
+    /* text-transform: uppercase; */
+}
+
+.banner__title.mob_hide {
+    display: none;
+}
+
+.banner__mob-container {
+    display: flex;
+    align-items: flex-end;
+
+    height: 100%;
+}
+
+.banner .container {
+    height: 100%;
+}
+
+.banner__bg {
+    padding: 24px 0 34px;
+
+    background: var(--color-main);
+}
+
+.banner-list {
+    padding-left: 10px;
+
+    list-style: disc;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.credits-list {
+    padding-left: 10px;
+
+    position: relative;
+}
+
+.banner-list__item {
+    /* display: flex;
+    align-items: center;
+    gap: 20px; */
+
+    font-size: 14px;
+    line-height: 32px;
+    font-weight: 400;
+    color: var(--color-white);
+
+    position: relative;
+}
+
+/* .banner-list__item::before {
+    content: "";
+
+    display: block;
+
+
+} */
+
+.credit__form {
+    margin-top: 24px;
+}
+
+.banner__button {
+    margin-top: 20px;
+
+    height: 40px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.form__checkbox-check[type=checkbox]+.form-checkbox__custom {
+    background-color: var(--color-white);
+}
+
+.banner__ball {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 29px;
+    height: 29px;
+
+    border-radius: 50%;
+
+    background: var(--color-white);
+
+    border: 2px solid var(--color-red);
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+
+.trade__form {
+    margin-top: 40px;
+}
+
+
+.banner__button {
+    height: 60px;
+}
+
+.credits-list__docs {
+    margin-top: 11px;
+}
+
+.credits-list__doc-head {
+    display: block;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    color: var(--color-white);
+
+    margin-bottom: 10px;
+}
+
+.credits-list__docs-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.credits-list__doc-item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-white);
+}
+
+/**************************/
+
+
+/********* $FOOTER *********/
+
+.footer {
+    padding: 40px 0;
+}
+
+.footer-text {
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.footer-links__link {
+    color: var(--color-main);
+}
+
+.footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.footer-button {
+    background: none;
+    border: none;
+
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    color: var(--color-main);
+    text-decoration: underline;
+
+    margin-top: 25px;
+}
+
+/**************************/
+
+
+/********* $POPUP *********/
+
+.popup {
+    padding: 14px 14px 20px;
+
+    height: 320px;
+
+    border-radius: 12px;
+
+    width: 98%;
+
+    display: none;
+}
+
+#modalCredit {
+    background: url(../img/modal-credit_mob.webp)no-repeat;
+    background-size: cover;
+}
+
+#modalRequest {
+    background: url(../img/modal-req_mob.webp)no-repeat;
+    background-size: cover;
+}
+
+#modal-success {
+    background: url(../img/modal-suc_mob.webp)no-repeat;
+    background-size: cover;
+}
+
+.popup__cont {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 100%;
+}
+
+#modal-success .popup__cont {
+    align-items: flex-end;
+}
+
+.popup__head {
+    display: block;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.popup__list {
+    list-style: disc;
+
+    margin-top: 10px;
+    padding-left: 15px;
+}
+
+.popup__list.mob_hide {
+    display: none;
+}
+
+.popup__list-item {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    color: var(--color-white);
+}
+
+.popup__input {
+    height: 40px;
+}
+
+.popup__form-cont {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.popup__form {
+    width: 240px;
+}
+
+.popup__button {
+    height: 40px;
+}
+
+.is-compact .fancybox__content>.f-button.is-close-btn {
+    width: 24px;
+    height: 24px;
+
+    border: 2px solid var(--color-white);
+
+    border-radius: 50%;
+}
+
+.f-button svg {
+    width: 10px;
+    height: 10px;
+    opacity: 1;
+    stroke: #FFF;
+    fill: #FFF;
+    stroke-width: 6px;
+}
+
+/**************************/
+
+
+.show-btn {
+    background: none;
+    border: none;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-main);
+    text-decoration: underline;
+    text-transform: uppercase;
+
+    width: max-content;
+
+    margin: 20px auto 0;
+
+    display: block;
+}
+
 @media screen and (min-width: 450px) {
     .time-block__container {
         width: 400px;
@@ -908,6 +1308,10 @@ body {
         width: 400px;
 
         margin: 0 auto;
+    }
+
+    .popup {
+        width: 360px;
     }
 }
 
